# cloud-site

./: .eleventy.js  .gitignore  README.md  about.njk  contact.njk  index.njk  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  push.yml
_includes/: base.njk
css/: style.css
data-pipeline/: analyse.py
lambda/: event_writer.py  visitor_counter.py
src/: about.njk  blog-index.njk  contact.njk  index.njk  projects.njk
src/_includes/: base.njk  blog-post.njk
src/blog/: blog.json  index.njk  my-first-blog.md  my-second-blog.md
src/css/: style.css
terraform/: .gitignore  cloudfront-function.js  main.tf  outputs.tf  variables.tf
tests/: test_e2e_website.py  test_lambda.py
